--- a/k8s-entities.yaml
+++ b/k8s-entities.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -55,19 +56,6 @@ spec:
       port: 80
       targetPort: 3000
   type: ClusterIP
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: stateful-app-service
-# spec:
-#   selector:
-#     app: stateful-app
-#   ports:
-#     - protocol: TCP
-#       port: 80
-#       targetPort: 3000
-#       nodePort: 30080
-#   type: NodePort
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -77,7 +65,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host:
+    - host: ""
       http:
         paths:
           - path: /
