--- a/k8s-entities.yaml
+++ b/k8s-entities.yaml
@@ -1,11 +1,27 @@
 ---
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: my-app-pv
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: "/mnt/data"
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: app-data-pvc
 spec:
+  storageClassName: manual
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
@@ -65,7 +81,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: ""
+    - host:
       http:
         paths:
           - path: /
