--- a/k8s-entities.yaml
+++ b/k8s-entities.yaml
@@ -1,4 +1,5 @@
 ---
+# PERSISTENT VOLUME, PERSISTENT VOLUME CLAIM, DEPLOYMENT, SERVICE, INGRESS AND HORIZONTAL POD AUTOSCALER FOR A STATEFUL APPLICATION
 apiVersion: v1
 kind: PersistentVolume
 metadata:
