--- a/task_4/minio.yaml
+++ b/task_4/minio.yaml
@@ -1,3 +1,4 @@
+# MINIO CONFIGURATIONS TO MAKE SHOWCASE REPRODUCIBLE WITH NO MANUAL STEPS
 auth:
   rootUser: minioadmin
   rootPassword: minioadminpassword
