--- a/task_5/stress.yaml
+++ b/task_5/stress.yaml
@@ -1,3 +1,4 @@
+# THIS JOB IS TO STRESS TEST THE FAUST CONSUMER BY SENDING A LARGE AMOUNT OF MESSAGES TO IT
 apiVersion: batch/v1
 kind: Job
 metadata:
