--- a/task_4/job.yaml
+++ b/task_4/job.yaml
@@ -1,4 +1,4 @@
-# JOB TO TRAIN THE MODEL ONCE USING A CONTAINERIZED APPLICATION
+# JOB TO TRAIN A NAÏVE BAYES MODEL ONCE USING A CONTAINERIZED APPLICATION
 apiVersion: batch/v1
 kind: Job
 metadata:
